Table Keynav tether fix, server and client navs, and fix to shiftless on modified arrow keys

--- a/ui/app/styles/components/keyboard-shortcuts-modal.scss
+++ b/ui/app/styles/components/keyboard-shortcuts-modal.scss
@@ -53,7 +53,10 @@
   text-transform: lowercase;
   color: black;
   font-weight: 300;
-  z-index: $z-tooltip;
+  z-index: $z-popover;
+  &.menu-level {
+    z-index: $z-tooltip;
+  }
 }
 // }
 
